# EJ__Nociones__Clave__Pablo__Alcolea

./: CMakeLists.txt  README.md
Proyecto 1/: Estudiante.h  Main.cpp  Persona.cpp  Persona.h
Proyecto 2/: funciones.cpp  funciones.h  main2.cpp
Proyecto_1/: Estudiante.cpp  Main.cpp  Main.h  Persona.h
Proyecto_2/: funciones.cpp  matematicas.cpp
