cmake_minimum_required(VERSION 3.29)
project(EJ__Nociones__Clave__Pablo__Alcolea)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)


add_executable(EJ__Nociones__Clave__Pablo__Alcolea
    "Proyecto 1/Estudiante.cpp"
    "Proyecto 1/Estudiante.h"
    "Proyecto 1/Main.cpp"
    "Proyecto 1/Main.h"
    "Proyecto 1/Persona.cpp"
    "Proyecto 1/Persona.h")
